--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "crypto-js": "^4.1.1",
     "next": "11.0.1",
     "react": "17.0.2",
